syntax= "proto3";

package pb;

option go_package = "./pkg/conference/common/pb";

service Conference {
    rpc StartConference (StartConferenceRequest) returns (StartConferenceResponse){}
    rpc JoinConference (JoinConferenceRequest) returns (JoinConferenceResponse){}
    rpc AcceptJoining (AcceptJoiningRequest) returns (AcceptJoiningResponse){}
    rpc DeclineJoining (DeclineJoiningRequest) returns (DeclineJoiningResponse){}
    rpc RemoveParticipant (RemoveParticipantRequest) returns (RemoveParticipantResponse){}
    rpc ToggleCamera (ToggleCameraRequest) returns (ToggleCameraResponse){}
    rpc ToggleMic (ToggleMicRequest) returns (ToggleMicResponse){}
    rpc ToggleParticipantCamera(ToggleParticipantCameraRequest) returns (ToggleParticipantCameraResponse){}
    rpc ToggleParticipantMic(ToggleParticipantMicRequest) returns (ToggleParticipantMicResponse){}
    rpc EndConference(EndConferenceRequest) returns (EndConferenceResponse){}
}

// Start Conference

message StartConferenceRequest {
    
    
 }

message StartConferenceResponse {

 }

//  Join Conference

 message JoinConferenceRequest {
    
 }

message JoinConferenceResponse {

 }

//  AcceptJoinRequest

 message AcceptJoiningRequest {

}

message AcceptJoiningResponse {

}

// Decline Joining
message DeclineJoiningRequest {

}

message DeclineJoiningResponse {
    
}

// RemoveParticipant

message RemoveParticipantRequest {

}

message RemoveParticipantResponse {

}


// ToggleCamera

message ToggleCameraRequest {

}


message ToggleCameraResponse {

}

// ToggleMic

message ToggleMicRequest {

}

message ToggleMicResponse {

}

// ToggleParticipantCamera

message ToggleParticipantCameraRequest {

}

message ToggleParticipantCameraResponse {

}


// ToggleParticipantMic

message ToggleParticipantMicRequest {

}

message ToggleParticipantMicResponse {

}

// LeaveConference

message LeaveConferenceRequest {

}

message LeaveConferenceResponse {

}


// EndConference

message EndConferenceRequest {

}

message EndConferenceResponse {

}